Fixed JS issues and updated html
All about me li's now have a functional toggle show/hide button below... Still need to finish HTML update by getting rid of list within a list issue.

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,8 +36,8 @@
                 <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger. I enjoy practicing yoga both in group classes and at my home.</p>
                 <button id="more-button2"> Read More</button>
                 <li id="hobby3">Reading</li>
-                <p id="hobby3info" class="hidden-info">A few of my favorite books:</p>
-                <ul class="hidden-info">
+                <p id="hobby3info" class="hidden-info">A few of my favorite books:<br>1984, George Orwell<br>The Host, Stephanie Meyer<br>The Hunger Games, Suzanne Collins</p>
+                <!-- <ul class="hidden-info">
                   <li>1984, George Orwell</li>
                   <li>The Host, Stephanie Meyer</li>
                   <li>The Hunger Games, Suzanne Collins</li>
@@ -45,10 +45,11 @@
                   <li>The Catcher in the Rye, J.D. Salinger</li>
                   <li>Verity, Colleen Hoover</li>
                   <li>Maximum Ride, James Patterson</li>
-                </ul>
-                <li>Music</li>
-                <p class="hidden-info">A few of my favorite bands and music artists:</p>
-                <ul class="hidden-info">
+                </ul> -->
+                <button id="more-button3">Read More</button>
+                <li id="hobby4">Music</li>
+                <p id="hobby4info" class="hidden-info">A few of my favorite bands and music artists:</p>
+                <!-- <ul class="hidden-info">
                   <li>The Beatles</li>
                   <li>Red Hot Chili Peppers</li>
                   <li>Led Zeppelin</li>
@@ -63,10 +64,11 @@
                   <li>Rage Against the Machine</li>
                   <li>Nicki Minaj</li>
                   <li>Bush</li>
-                </ul>
-                <li>Movies & Television</li>
-                <p class="hidden-info">A few of my favorite movies and TV shows:</p>
-                <ul class="hidden-info">
+                </ul> -->
+                <button id="more-button4">Read More</button>
+                <li id="hobby5">Movies & Television</li>
+                <p id="hobby5info" class="hidden-info">A few of my favorite movies and TV shows:</p>
+                <!-- <ul class="hidden-info">
                   <li>Breaking Bad</li>
                   <li>Friends</li>
                   <li>Cop Car</li>
@@ -80,10 +82,11 @@
                   <li>Liar Liar</li>
                   <li>Elf</li>
                   <li>Fight Club</li>
-                </ul>
-                <li>Fashion</li>
-                <p class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite brands. Here's a few:</p>
-                <ul class="hidden-info">
+                </ul> -->
+                <button id="more-button5">Read More</button>
+                <li id="hobby6">Fashion</li>
+                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite brands. Here's a few:</p>
+                <!-- <ul class="hidden-info">
                   <li>Express</li>
                   <li>Nevaeh</li>
                   <li>Nike</li>
@@ -93,17 +96,23 @@
                   <li>H&M</li>
                   <li>Nordstrom</li>
                   <li>Inkey List</li>
-                </ul>
-                <li>Travel</li>
-                <p class="hidden-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
-                <li>Fishing & Crabbing</li>
-                <p class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat! Do you have any outdoor hobbies?</p>
-                <li>Archery</li>
-                <p class="hidden-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
-                <li>Photography</li>
-                <p class="hidden-info">As with archery, I'm no professional photographer. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
-                <li>Learning Languages</li>
-                <p class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these new languages. Learning coding languages is exciting, too!</p>
+                </ul> -->
+                <button id="more-button6">Read More</button>
+                <li id="hobby7">Travel</li>
+                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
+                <button id="more-button7">Read More</button>
+                <li id="hobby8">Fishing & Crabbing</li>
+                <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat! Do you have any outdoor hobbies?</p>
+                <button id="more-button8">Read More</button>
+                <li id="hobby9">Archery</li>
+                <p id="hobby9info" class="hidden-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
+                <button id="more-button9">Read More</button>
+                <li id="hobby10">Photography</li>
+                <p id="hobby10info" class="hidden-info">As with archery, I'm no professional photographer. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
+                <button id="more-button10">Read More</button>
+                <li id="hobby11">Learning Languages</li>
+                <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these new languages. Learning coding languages is exciting, too!</p>
+                <button id="more-button11">Read More</button>
               </ul>
         </section>
     </main>
