Finished HTML markup and all hidden info toggle is functional

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,69 +34,64 @@
                 <button id="more-button1">Read More</button>
                 <li id="hobby2">Yoga</li>
                 <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger. I enjoy practicing yoga both in group classes and at my home.</p>
-                <button id="more-button2"> Read More</button>
+                <button id="more-button2">Read More</button>
                 <li id="hobby3">Reading</li>
-                <p id="hobby3info" class="hidden-info">A few of my favorite books:<br>1984, George Orwell<br>The Host, Stephanie Meyer<br>The Hunger Games, Suzanne Collins</p>
-                <!-- <ul class="hidden-info">
-                  <li>1984, George Orwell</li>
-                  <li>The Host, Stephanie Meyer</li>
-                  <li>The Hunger Games, Suzanne Collins</li>
-                  <li>Animal Farm, George Orwell</li>
-                  <li>The Catcher in the Rye, J.D. Salinger</li>
-                  <li>Verity, Colleen Hoover</li>
-                  <li>Maximum Ride, James Patterson</li>
-                </ul> -->
+                <p id="hobby3info" class="hidden-info">A few of my favorite books:<br>
+                                                        1984, George Orwell<br>
+                                                        The Host, Stephanie Meyer<br>
+                                                        The Hunger Games, Suzanne Collins<br>
+                                                        Animal Farm, George Orwell<br>
+                                                        The Catcher in the Rye, J.D. Salinger<br>
+                                                        The Giver, Lois Lowry<br>
+                                                        Verity, Colleen Hoover<br>
+                                                        Maximum Ride, James Patterson</p>              
                 <button id="more-button3">Read More</button>
                 <li id="hobby4">Music</li>
-                <p id="hobby4info" class="hidden-info">A few of my favorite bands and music artists:</p>
-                <!-- <ul class="hidden-info">
-                  <li>The Beatles</li>
-                  <li>Red Hot Chili Peppers</li>
-                  <li>Led Zeppelin</li>
-                  <li>Nirvana</li>
-                  <li>Chevelle</li>
-                  <li>Queen</li>
-                  <li>Alanis Morissette</li>
-                  <li>Rod Stewart</li>
-                  <li>Fuel</li>
-                  <li>Tool</li>
-                  <li>Pearl Jam</li>
-                  <li>Rage Against the Machine</li>
-                  <li>Nicki Minaj</li>
-                  <li>Bush</li>
-                </ul> -->
+                <p id="hobby4info" class="hidden-info">A few of my favorite bands and music artists:<br>
+                                                        The Beatles<br>
+                                                        Red Hot Chili Peppers<br>
+                                                        Led Zeppelin<br>
+                                                        Nirvana<br>
+                                                        Chevelle<br>
+                                                        Queen<br>
+                                                        Alanis Morissette<br>
+                                                        Rod Stewart<br>
+                                                        Fuel<br>
+                                                        Tool<br>
+                                                        Pearl Jam<br>
+                                                        Rage Against the Machine<br>
+                                                        Nicki Minaj<br>
+                                                        Bush<br>
+                                                        Chris Stapleton</p>
+                 
                 <button id="more-button4">Read More</button>
                 <li id="hobby5">Movies & Television</li>
-                <p id="hobby5info" class="hidden-info">A few of my favorite movies and TV shows:</p>
-                <!-- <ul class="hidden-info">
-                  <li>Breaking Bad</li>
-                  <li>Friends</li>
-                  <li>Cop Car</li>
-                  <li>Bruce Almighty</li>
-                  <li>The Big Lebowski</li>
-                  <li>Parasite</li>
-                  <li>Fallen</li>
-                  <li>Office Space</li>
-                  <li>Waiting</li>
-                  <li>The Hunt</li>
-                  <li>Liar Liar</li>
-                  <li>Elf</li>
-                  <li>Fight Club</li>
-                </ul> -->
+                <p id="hobby5info" class="hidden-info">A few of my favorite movies and TV shows:<br>
+                                                        Breaking Bad<br>
+                                                        Friends<br>
+                                                        Cop Car<br>
+                                                        Bruce Almighty<br>
+                                                        The Big Lebowski<br>
+                                                        Parasite<br>
+                                                        Fallen<br>
+                                                        Office Space<br>
+                                                        Waiting<br>
+                                                        The Hunt<br>
+                                                        Liar Liar<br>
+                                                        Elf<br>
+                                                        Fight Club</p>
                 <button id="more-button5">Read More</button>
                 <li id="hobby6">Fashion</li>
-                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite brands. Here's a few:</p>
-                <!-- <ul class="hidden-info">
-                  <li>Express</li>
-                  <li>Nevaeh</li>
-                  <li>Nike</li>
-                  <li>Banana Republic</li>
-                  <li>Honest Beauty</li>
-                  <li>Beis</li>
-                  <li>H&M</li>
-                  <li>Nordstrom</li>
-                  <li>Inkey List</li>
-                </ul> -->
+                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite brands. Here's a few:<br>
+                                                        Express<br>
+                                                        Nevaeh<br>
+                                                        Nike<br>
+                                                        Banana Republic<br>
+                                                        Honest Beauty<br>
+                                                        Beis<br>
+                                                        H&M<br>
+                                                        Nordstrom<br>
+                                                        Inkey List</p>
                 <button id="more-button6">Read More</button>
                 <li id="hobby7">Travel</li>
                 <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
