Text & format edits; HTML corrections
After fixing JS issues, edited 'About Me' HTML to pass HTML validation. Did a few more text content and formatting changes I wanted prior to submission. Still need to reformat 'About Me' page altered by HTML corrections

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,47 +28,57 @@
     <main class="flex">
         <section class="card">
           <h2>Hobbies & Interests</h2>
-            <ul class="hobbieslist">
-                <li id="hobby1">Weightlifting</li>
-                <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend, and it totally changed my health... and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
+            <section class="hobbieslist">
+                <h3 id="hobby1">Weightlifting</h3>
+                <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend and it totally changed my health--and my life! This transformation inspired me to major in Kinesiology and later, inspired me to be a personal trainer.</p>
                 <button id="more-button1">Read More</button>
-                <li id="hobby2">Yoga</li>
-                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger. I enjoy practicing yoga both in group classes and at my home.</p>
+                <h3 id="hobby2">Yoga</h3>
+                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights and it was a total gamechanger. I enjoy practicing yoga in group classes at a studio/gym <em>and</em> in solo sessions at home. My favorite yoga resource is "Yoga with Adriene" on Youtube.</p>
                 <button id="more-button2">Read More</button>
-                <li id="hobby3">Reading</li>
-                <p id="hobby3info" class="hidden-info">A few of my favorite books:<br>
+                <h3 id="hobby3">Reading</h3>
+                <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br>
                                                         1984, George Orwell<br>
                                                         The Host, Stephanie Meyer<br>
                                                         The Hunger Games, Suzanne Collins<br>
                                                         Animal Farm, George Orwell<br>
-                                                        The Catcher in the Rye, J.D. Salinger<br>
                                                         The Giver, Lois Lowry<br>
                                                         Verity, Colleen Hoover<br>
-                                                        Maximum Ride, James Patterson</p>              
+                                                        Maximum Ride, James Patterson<br><br>
+                                                        I'm currently reading The Catcher in the Rye by J.D. Salinger.<br><br>
+                                                        Next, I'd like to read Anthony Keidis' autobiography, Scar Tissue.<br><br>
+                                                        I love recommendations if you have any suggestions for my reading list!</p>              
                 <button id="more-button3">Read More</button>
-                <li id="hobby4">Music</li>
-                <p id="hobby4info" class="hidden-info">A few of my favorite bands and music artists:<br>
+                <h3 id="hobby4">Music</h3>
+                <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br>
+                                                        Here's a long list of some of my favorite musicians:<br>
                                                         The Beatles<br>
-                                                        Red Hot Chili Peppers<br>
                                                         Led Zeppelin<br>
                                                         Nirvana<br>
                                                         Chevelle<br>
+                                                        Red Hot Chili Peppers<br>
                                                         Queen<br>
                                                         Alanis Morissette<br>
                                                         Rod Stewart<br>
                                                         Fuel<br>
+                                                        Foo Fighters<br>
+                                                        Matchbox Twenty<br>
+                                                        Styx<br>
+                                                        Toadies<br>
                                                         Tool<br>
                                                         Pearl Jam<br>
                                                         Rage Against the Machine<br>
                                                         Nicki Minaj<br>
                                                         Bush<br>
-                                                        Chris Stapleton</p>
+                                                        Chris Stapleton<br>
+                                                        Billy Joel<br><br>
+                                                        Do you like any of these? What's YOUR top favorites?</p>
                  
                 <button id="more-button4">Read More</button>
-                <li id="hobby5">Movies & Television</li>
-                <p id="hobby5info" class="hidden-info">A few of my favorite movies and TV shows:<br>
-                                                        Breaking Bad<br>
+                <h3 id="hobby5">Movies & Television</h3>
+                <p id="hobby5info" class="hidden-info">Ahh, television.. my guilty pleasure.<br><br>
+                                                        Here's a few of my favorite movies and shows:<br>
                                                         Friends<br>
+                                                        Breaking Bad<br>
                                                         Cop Car<br>
                                                         Bruce Almighty<br>
                                                         The Big Lebowski<br>
@@ -79,10 +89,13 @@
                                                         The Hunt<br>
                                                         Liar Liar<br>
                                                         Elf<br>
-                                                        Fight Club</p>
+                                                        Fight Club<br><br>
+                                                        I also watch a lot of true crime documentaries.<br><br>
+                                                        What's some of your favorites? Do you also watch more television than you care to admit?</p>
                 <button id="more-button5">Read More</button>
-                <li id="hobby6">Fashion</li>
-                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite brands. Here's a few:<br>
+                <h3 id="hobby6">Fashion</h3>
+                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Whichever has the highest employee discount is likely to be first on my list!<br><br>
+                                                        Here's a few of my favorite brands:<br>
                                                         Express<br>
                                                         Nevaeh<br>
                                                         Nike<br>
@@ -93,22 +106,27 @@
                                                         Nordstrom<br>
                                                         Inkey List</p>
                 <button id="more-button6">Read More</button>
-                <li id="hobby7">Travel</li>
-                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
+                <h3 id="hobby7">Travel</h3>
+                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including where I live! I have a resolution to travel more after landing a great web dev job.<br><br>
+                                                        Do you enjoy traveling? How many have countries and/or states have you been to?</p>
                 <button id="more-button7">Read More</button>
-                <li id="hobby8">Fishing & Crabbing</li>
-                <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat! Do you have any outdoor hobbies?</p>
+                <h3 id="hobby8">Fishing & Crabbing</h3>
+                <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat!<br><br>
+                                                        Do you have any outdoor hobbies?</p>
                 <button id="more-button8">Read More</button>
-                <li id="hobby9">Archery</li>
-                <p id="hobby9info" class="hidden-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
+                <h3 id="hobby9">Archery</h3>
+                <p id="hobby9info" class="hidden-info">I'm no Robin Hood, but I was gifted a bow and I am REALLY enjoying this new hobby of mine. I was surprised to find that I'm not a terrible shot.<br><br>
+                                                        Do you have any hobbies you owe to the generosity of another?</p>
                 <button id="more-button9">Read More</button>
-                <li id="hobby10">Photography</li>
-                <p id="hobby10info" class="hidden-info">As with archery, I'm no professional photographer. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
+                <h3 id="hobby10">Photography</h3>
+                <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. My interest in photography was sparked by my mom. I enjoy collecting lots of photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps you can capture with such basic equipment!<br><br>
+                                                          Have you captured any shots you're proud of? If so, I'd love to see a few of your favorites!</p>
                 <button id="more-button10">Read More</button>
-                <li id="hobby11">Learning Languages</li>
-                <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these new languages. Learning coding languages is exciting, too!</p>
+                <h3 id="hobby11">Learning Languages</h3>
+                <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. Learning coding languages is exciting, too!<br><br>
+                                                        Tu parle francais? Tu parle JavaScript?</p>
                 <button id="more-button11">Read More</button>
-              </ul>
+                </section>
         </section>
     </main>
     <footer>
