--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,10 @@
         <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
-          <li>Follow me on <a href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
-          <li>View my <a href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a> resume</li>
-          <li>Check out my <a href="https://github.com/victoriafuselier">Github</a> account</li>
+          <li id="contact-list-spacing">And don't forget to:</li>
+          <li>Follow me on <a id="socialcolor1" href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
+          <li>View my <a id="socialcolor2" href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a> resume</li>
+          <li>Check out my <a id="socialcolor3" href="https://github.com/victoriafuselier">Github</a> account</li>
         </ul>
       </section>
     </main>
