--- a/skills.html
+++ b/skills.html
@@ -29,10 +29,11 @@
         <section class="card">
           <h2>Education</h2>
                 <ul>
-                    <li>Lake Arthur High<br>Valedictorian</li>
-                    <li>Louisiana State University<br>Bachelor's in Kinesiology</li>
+                    <li>Lake Arthur High<br><em>Valedictorian</em></li>
+                    <li>Louisiana State University<br><em>Bachelor's in Kinesiology</em></li>
                     <li>Free Code Camp</li>
-                    <li>Team Treehouse<br>Techdegree</li>                    
+                    <!-- CHANGE TO GRADUATE AFTER COMPLETION -->
+                    <li>Team Treehouse<br><em>Techdegree Student</em></li>                    
                 </ul>
         </section> 
         <section class="card">
