Contact page makeover

--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,17 @@
     </header>
 
     <main class="flex">
-      <section class="card" id="contactcard">
+      <section class="card" id="contact-card">
         <h2>Contact Info:</h2>
-        <ul id="contactlist">
+        <ul class="contact-list">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
-          <li id="contact-list-spacing">And don't forget to:</li>
-          <li>Follow me on <a id="socialcolor1" href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
-          <li>View my <a id="socialcolor2" href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a> resume</li>
-          <li>Check out my <a id="socialcolor3" href="https://github.com/victoriafuselier">Github</a> account</li>
+        </ul>
+        <h2 id="contact-list-spacing">Social Media:</h2>
+        <ul class="contact-list">
+          <li>Follow me on <a class="social-link" href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
+          <li>View my <a class="social-link" href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a> resume</li>
+          <li>Check out my <a class="social-link" href="https://github.com/victoriafuselier">Github</a> Profile</li>
         </ul>
       </section>
     </main>
