Skills page makeover
Still kind of dull with no color; may edit again

--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
     <main class="flex">
         <section class="card">
           <h2>Education</h2>
-                <ul>
+                <ul class="skills-page-list">
                     <li>Lake Arthur High<br><em>Valedictorian</em></li>
                     <li>Louisiana State University<br><em>Bachelor's in Kinesiology</em></li>
                     <li>Free Code Camp</li>
@@ -38,7 +38,7 @@
         </section> 
         <section class="card">
           <h2>Skills</h2>
-                <ul>
+                <ul class="skills-page-list">
                     <li>Typing</li>
                     <li>Organization</li>
                     <li>Time Management</li>
@@ -53,7 +53,7 @@
         </section>
         <section class="card">
             <h2>Resources</h2>
-                <ul>
+                <ul class="skills-page-list">
                     <li>Team Treehouse</li>
                     <li>Free Code Camp</li>
                     <li>W3Schools</li>
