'About Me' page format makeover

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,13 +22,13 @@
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">About Me</h1>
-      <p class="tag tagline">Click the button below each item to learn a little extra about me!</p>
+      <p class="tag tagline">These are my hobbies. Click the button below each item to learn a little extra about me!</p>
     </header>
 
     <main class="flex">
-        <section class="card">
-          <h2>Hobbies & Interests</h2>
-            <section class="hobbieslist">
+        <section class="card" id="hobbies-card">
+          <!-- <h2>Hobbies & Interests</h2> -->
+            <section class="hobbies-list">
                 <h3 id="hobby1">Weightlifting</h3>
                 <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend and it totally changed my health--and my life! This transformation inspired me to major in Kinesiology and later, inspired me to be a personal trainer.</p>
                 <button id="more-button1">Read More</button>
@@ -49,7 +49,7 @@
                                                         I love recommendations if you have any suggestions for my reading list!</p>              
                 <button id="more-button3">Read More</button>
                 <h3 id="hobby4">Music</h3>
-                <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br>
+                <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br><br>
                                                         Here's a long list of some of my favorite musicians:<br>
                                                         The Beatles<br>
                                                         Led Zeppelin<br>
