Obsessive renaming of classes/ID's for neat CSS

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
 
-    <header id="aboutmeheader">
+    <header id="about-me-header">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">About Me</h1>
       <p class="tag tagline">These are my hobbies. Click the button below each item to learn a little extra about me!</p>
