--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
 
-    <header id="contactheader">
+    <header id="contact-header">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag headline">Fancy a Chat?</h1>
       <p class="tag tagline">So would I!</p>
