--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
 
-    <header id="indexheader">
+    <header id="index-header">
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
       <h1 class="tag headline">Hello! I’m Victoria</h1>
       <p class="tag tagline">My friends call me Vic</p>
