--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
 
-    <header id="skillsheader">
+    <header id="skills-header">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
       <h1 class="tag headline">My Skills</h1>
       <p class="tag tagline">Plus my education history and a list of some of my favorite web dev resources</p>
