'About Me' formatting changes
Had to add <h2> back in to pass html validation, then had to edit format to make it look good again

--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
 
     <main class="flex">
         <section class="card" id="hobbies-card">
-          <!-- <h2>Hobbies & Interests</h2> -->
+          <h2 id="hobbies-heading">Hobbies & Interests:</h2>
             <section class="hobbies-list">
                 <h3 id="hobby1">Weightlifting</h3>
                 <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend and it totally changed my health--and my life! This transformation inspired me to major in Kinesiology and later, inspired me to be a personal trainer.</p>
