--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <main class="flex">
       <section class="card">
-        <h2>Background</h2>
+        <h2>Background:</h2>
         <p>I’m an aspiring web developer who loves learning cool new coding tricks. WebDev topics that are especially interesting to me are responsive web design, visual design for the web, and accessibility.</p>
         <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building functional and aesthetic websites.</p>
       </section> 
 
       <section class="card">
-        <h2>Goals</h2>
+        <h2>Goals:</h2>
         <p>I want to increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
