--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
 
     <main class="flex">
         <section class="card">
-          <h2>Education</h2>
+          <h2>Education:</h2>
                 <ul class="skills-page-list">
                     <li>Lake Arthur High<br><em>Valedictorian</em></li>
                     <li>Louisiana State University<br><em>Bachelor's in Kinesiology</em></li>
@@ -37,7 +37,7 @@
                 </ul>
         </section> 
         <section class="card">
-          <h2>Skills</h2>
+          <h2>Skills:</h2>
                 <ul class="skills-page-list">
                     <li>Typing</li>
                     <li>Organization</li>
@@ -52,7 +52,7 @@
                 </ul>
         </section>
         <section class="card">
-            <h2>Resources</h2>
+            <h2>Resources:</h2>
                 <ul class="skills-page-list">
                     <li>Team Treehouse</li>
                     <li>Free Code Camp</li>
