Text edits upon proofreading; added french char
Changed text. Put the word francais on 'About Me' page and needed a cedilla

--- a/skills.html
+++ b/skills.html
@@ -43,7 +43,9 @@
                     <li>Organization</li>
                     <li>Time Management</li>
                     <li>Professionalism</li>
-                    <li>Grammar & Writing</li>
+                    <li>Spelling, Grammar, & Writing</li>
+                    <li>Effective Communication</li>
+                    <li>Knack for Visual Design</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
