--- a/aboutme.html
+++ b/aboutme.html
@@ -37,16 +37,16 @@
                 <button id="more-button2">Read More</button>
                 <h3 id="hobby3">Reading</h3>
                 <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br>
-                                                        1984, George Orwell<br>
-                                                        The Host, Stephanie Meyer<br>
-                                                        The Hunger Games, Suzanne Collins<br>
-                                                        Animal Farm, George Orwell<br>
-                                                        The Giver, Lois Lowry<br>
-                                                        Verity, Colleen Hoover<br>
-                                                        Maximum Ride, James Patterson<br><br>
-                                                        I'm currently reading The Catcher in the Rye by J.D. Salinger.<br><br>
-                                                        Next, I'd like to read Anthony Keidis' autobiography, Scar Tissue.<br><br>
-                                                        I love recommendations if you have any suggestions for my reading list!</p>              
+                                                        <em>1984</em>, George Orwell<br>
+                                                        <em>The Host</em>, Stephanie Meyer<br>
+                                                        <em>The Hunger Games</em>, Suzanne Collins<br>
+                                                        <em>Animal Farm</em>, George Orwell<br>
+                                                        <em>The Giver</em>, Lois Lowry<br>
+                                                        <em>Verity</em>, Colleen Hoover<br>
+                                                        <em>Maximum Ride</em>, James Patterson<br><br>
+                                                        I'm currently reading <em>The Catcher in the Rye</em> by J.D. Salinger.<br><br>
+                                                        Next, I'd like to read Anthony Keidis' autobiography--<em>Scar Tissue</em>--and <em>It Ends With Us</em> by Colleen Hoover.<br><br>
+                                                        If you have any suggestions for my reading list, I'd love to hear them!</p>              
                 <button id="more-button3">Read More</button>
                 <h3 id="hobby4">Music</h3>
                 <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br><br>
@@ -71,7 +71,7 @@
                                                         Bush<br>
                                                         Chris Stapleton<br>
                                                         Billy Joel<br><br>
-                                                        Do you like any of these? What's YOUR top favorites?</p>
+                                                        Do you like any of these? Which artists are YOUR favorites?</p>
                  
                 <button id="more-button4">Read More</button>
                 <h3 id="hobby5">Movies & Television</h3>
@@ -79,6 +79,7 @@
                                                         Here's a few of my favorite movies and shows:<br>
                                                         Friends<br>
                                                         Breaking Bad<br>
+                                                        Stranger Things<br>
                                                         Cop Car<br>
                                                         Bruce Almighty<br>
                                                         The Big Lebowski<br>
@@ -91,10 +92,10 @@
                                                         Elf<br>
                                                         Fight Club<br><br>
                                                         I also watch a lot of true crime documentaries.<br><br>
-                                                        What's some of your favorites? Do you also watch more television than you care to admit?</p>
+                                                        What are some of your favorite films/series to watch?</p>
                 <button id="more-button5">Read More</button>
                 <h3 id="hobby6">Fashion</h3>
-                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Whichever has the highest employee discount is likely to be first on my list!<br><br>
+                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Imagine the employee discount!<br><br>
                                                         Here's a few of my favorite brands:<br>
                                                         Express<br>
                                                         Nevaeh<br>
@@ -107,7 +108,7 @@
                                                         Inkey List</p>
                 <button id="more-button6">Read More</button>
                 <h3 id="hobby7">Travel</h3>
-                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including where I live! I have a resolution to travel more after landing a great web dev job.<br><br>
+                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including the ones I live in! I have a resolution to travel more after landing a great web development job with a stable schedule.<br><br>
                                                         Do you enjoy traveling? How many have countries and/or states have you been to?</p>
                 <button id="more-button7">Read More</button>
                 <h3 id="hobby8">Fishing & Crabbing</h3>
@@ -119,12 +120,12 @@
                                                         Do you have any hobbies you owe to the generosity of another?</p>
                 <button id="more-button9">Read More</button>
                 <h3 id="hobby10">Photography</h3>
-                <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. My interest in photography was sparked by my mom. I enjoy collecting lots of photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps you can capture with such basic equipment!<br><br>
+                <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. I enjoy collecting photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps can be captured with such basic equipment!<br><br>
                                                           Have you captured any shots you're proud of? If so, I'd love to see a few of your favorites!</p>
                 <button id="more-button10">Read More</button>
                 <h3 id="hobby11">Learning Languages</h3>
                 <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. Learning coding languages is exciting, too!<br><br>
-                                                        Tu parle francais? Tu parle JavaScript?</p>
+                                                        Tu parle fran&ccedil;ais? Tu parle JavaScript?</p>
                 <button id="more-button11">Read More</button>
                 </section>
         </section>
