Nav bar now hides page title on small screens
Began cleaning up CSS and making the layout to be responsive (mobile first!)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
     <nav class="main-nav">
         <ul class="nav">
-          <li class="name">Welcome!</li>
+          <li id="nav-title">Welcome!</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
