--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 
     <nav class="main-nav">
         <ul class="nav">
-          <li class="name">About Me</li>
+          <li id="page-title">About Me</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
