--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="main-nav">
         <ul class="nav">
-          <li class="name">Contact</li>
+          <li id="page-title">Contact</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
