--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 
     <nav class="main-nav">
         <ul class="nav">
-          <li class="page-title">Skills</li>
+          <li id="page-title">Skills</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
